--- a/deployments/docker/localstack/docker-compose-local.yml
+++ b/deployments/docker/localstack/docker-compose-local.yml
@@ -13,8 +13,8 @@ services:
       - 27017:27017
   family-tree:
     build:
-      context: ../../../../
-      dockerfile: build/package/docker/service/Dockerfile
+      context: ../../../
+      dockerfile: deployments/docker/service/Dockerfile
     image: family-tree:latest
     container_name: family-tree
     ports:
